# sep-trader

./: .clang-format  .codechecker_skip  .gitignore  .gitmodules  .kilocodemodes  AGENT.md  AGENTS.md  CHANGELOG.md  CLOUD_DEPLOYMENT.md  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  DEPLOYMENT.md  DROPLET_SETUP.md  Dockerfile  GEMINI.md  Gemfile  IMPLEMENTATION_NOTES.md  INVESTOR_PACKAGE.md  LICENSE  MULTI_TICKER_USAGE.md  OANDA.env  PROFESSIONAL_TRADER_BOT_ROADMAP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_DSL.md  README_LIVE_TRAINING.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.2.0.md  SEP_Engine_White_Paper.md  SEP_Physics_Tests_Outline.md  SYSTEM_ARCHITECTURE.md  SYSTEM_OVERVIEW.md  SYSTEM_STATUS_REPORT.md  TASK.md  TODO.md  WINDOWS_SETUP.md  accuracy_optimization_plan.py  baseline_log.txt  (+136 more)
examples/: CMakeLists.txt  agi_demo_clean.sep  agi_demo_comprehensive.sep  agi_demo_simple.sep  batch_processing_demo.sep  comprehensive_features_test.sep  debug_async.sep  debug_exceptions.sep  debug_import.sep  debug_inheritance.sep  debug_precedence.sep  debug_throw.sep  dsl_core_test.cpp  dsl_performance_benchmark.cpp  dsl_test.cpp  dsl_test_simple.cpp  engine_config_demo.sep  enhanced_cache_testbed.cpp  gpu_memory_demo.sep  iot_maintenance.sep  pattern_cache_demo.sep  pattern_inheritance_test.cpp  pattern_inheritance_test.dsl  pattern_metric_example.cpp  phase2_fusion_testbed.cpp  pme_testbed.cpp  pme_testbed_enhanced.cpp  pme_testbed_phase2.cpp  quantum_trading_bot.sep  simple_import.sep  simple_performance_test  simple_performance_test.cpp  streaming_demo.sep  test_advanced_precedence.sep  test_aggregation.sep  test_arrays.sep  test_arrays_comprehensive.sep  test_async.sep  test_builtin_functions.sep  test_data_preprocessing_concept.sep  (+21 more)
examples/advanced/: forex_trading.sep  multi_timeframe_analysis.sep  quantum_analysis.sep
examples/beginner/: basic_patterns.sep
examples/real-world/: sensor_monitoring.sep
src/: CMakeLists.txt  array_fix.h  array_protection.h  array_workaround.h  cuda_gcc_compat.h  cuda_math_fix.h  cuda_safe_includes.h  force_array.h  functional_safe.h  nlohmann_fix.h  nlohmann_json_protected.h  nlohmann_json_safe.h  sep_precompiled.h  simple_array_fix.h
src/api/: CMakeLists.txt  README.md  api_exception.h  auth_middleware.cpp  auth_middleware.h  background_cleanup.h  bridge.cpp  bridge.h  bridge.hpp  bridge_c.cpp  bridge_internal.hpp  client.cpp  client.h  connection_manager.h  crow_adapter.cpp  crow_adapter.h  crow_adapter_impl.h  crow_error.cpp  crow_request.h  curl_http_client.cpp  js_integration.cpp  js_integration.h  json_helpers.h  lock_free_rate_limiter.cpp  lock_free_rate_limiter.h  ollama_client.cpp  ollama_types.h  rate_limit_middleware.cpp  rate_limit_middleware.h  rate_limiter.h  request_interface.h  sep_engine.cpp  sep_engine.h  server.cpp  server.h  state_controller.cpp  state_controller.hpp  thread_pool.h  types.h
src/app/: DataAccessService.cpp  DataAccessService.h  IDataAccessService.h  IMemoryTierService.h  IPatternRecognitionService.h  IQuantumProcessingService.h  IService.h  IServiceFactory.h  ITradingLogicService.h  MemoryTierService.cpp  MemoryTierService.h  MemoryTierTypes.h  PatternRecognitionService.cpp  PatternRecognitionService.h  PatternTypes.h  QuantumProcessingService.cpp  QuantumProcessingService.h  QuantumTypes.h  Result.h  ServiceBase.cpp  ServiceBase.h  TradingLogicService.cpp  TradingLogicService.h  candle_types.h  cli_main.cpp  cuda_context.cuh  cuda_types.cuh  dashboard_server.py  data_downloader.cpp  dsl_main.cpp  enhanced_market_model_cache.cpp  enhanced_market_model_cache.hpp  filter.cpp  filter.h  forward_window_kernels.cpp  forward_window_kernels.cu  forward_window_kernels.cuh  forward_window_kernels.hpp  health_monitor_c_impl.c  health_monitor_c_wrapper.cpp  (+36 more)
src/apps/: CMakeLists.txt  README.md  data_downloader.cpp
src/c_api/: sep_c_api.cpp
src/cache/: cache_health_monitor.cpp  cache_health_monitor.hpp  cache_metadata.hpp  cache_validator.cpp  cache_validator.hpp  weekly_cache_manager.cpp  weekly_cache_manager.hpp
src/cli/: csignal_compat.h  dsl_main.cpp  main.cpp  trader_cli.cpp  trader_cli.hpp
src/common/: CMakeLists.txt  README.md  array_fix.h  candle_data.h  financial_data_types.h  header_fix.h  json_wrapper.hpp  namespace_protection.hpp  pqxx_time_point_traits.h  sep_precompiled.h  stable_headers.h
src/config/: config_watcher.cpp  config_watcher.hpp  dynamic_config_manager.cpp  dynamic_config_manager.hpp
src/connectors/: CMakeLists.txt  README.md  market_data_converter.cpp  market_data_converter.h  oanda_connector.cpp  oanda_connector.h  qdrant_connector.cpp  qdrant_connector.h  test_qdrant.cpp
src/core/: RemoteDataManager.h  TrainingCoordinator.h  allocation_metrics.cpp  allocation_metrics.h  backtesting_engine.hpp  batch_processor.cpp  batch_processor.h  cache_health_monitor.cpp  cache_health_monitor.hpp  cache_metadata.hpp  cache_validator.cpp  cache_validator.hpp  candle_data.h  cli_commands.cpp  cli_commands.hpp  coherence_manager.cpp  coherence_manager.h  coherence_manager.hpp  common.h  compat.h  compression.cpp  compression.h  config.h  config_watcher.cpp  config_watcher.hpp  constants.h  core.h  cpp20_compatibility.h  cuda.h  cuda_api.cu  cuda_api.hpp  cuda_config.h  cuda_error.cuh  cuda_helpers.h  cuda_host_decls.h  cuda_impl.cu  cuda_impl.h  cuda_includes.cuh  cuda_prerequisites.h  cuda_runtime_impl.h  (+170 more)
src/core_integrated/: cache_health_monitor.cpp  cache_health_monitor.hpp  cache_validator.cpp  cache_validator.hpp  dynamic_config_manager.hpp  pair_manager.cpp  trading_state.cpp  weekly_cache_manager.cpp  weekly_cache_manager.hpp
src/core_types/: CMakeLists.txt  candle_data.h  pattern.h
src/cuda/: README.md  buffer.h  cuda_api.h  (+27 more)
tests/: CMakeLists.txt  README.md  integration_test.cpp  oanda_trader_e2e_test.cpp  oanda_trader_test.cpp  pattern_metrics_test.cpp  quantum_processor_test.cpp  quantum_signal_bridge_test.cpp  test_engine_metrics_parser.py  test_forward_window_metrics.cpp  test_json_utils.py  test_portfolio_signal_aggregator.py  trajectory_metrics_test.cpp
(+1299 files in other folders)
